--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,9 +4,12 @@
       <h1>Welcome!</h1>
         <p style="font-size: 22px;">Первый в мире удобный менеджер флеш-карточек. Именно так.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="#" role="button">Далее »</a>
+          <a class="btn btn-lg btn-primary" href="/" role="button">Следующая карточка »</a>
         </p>
       </div>
-	</p>
-</section>
 
+		<div class="row">
+	  	<%= render partial: './cards/card_check_translation_home', layout: './cards/card_form_label', locals: { title: 'Перевод карточки' } %>
+		</div>
+
+</section>
