--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
       </div>
 
 		<div class="row">
-	  	<%= render partial: './cards/card_check_translation_home', layout: './cards/card_form_label', locals: { title: 'Перевод карточки' } %>
+	  	<%= render partial: 'cards/card_check_translation_home', layout: 'cards/card_form_label', locals: { title: 'Перевод карточки' } %>
 		</div>
 
 </section>
