Added url helpers

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
       <h1>Welcome!</h1>
         <p style="font-size: 22px;">Первый в мире удобный менеджер флеш-карточек. Именно так.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="/" role="button">Следующая карточка »</a>
+          <%= link_to "Следующая карточка »", root_path, class: "btn btn-lg btn-primary" %>
         </p>
       </div>    
 		<div class="row">
