--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			      </button>
-			      <a class="navbar-brand" href="/">Флэшкарточкер</a>
-			    </div>  
+			      <%= link_to "Флэшкарточкер", root_path, class: "navbar-brand" %>
+			    </div>
 			      <ul class="nav navbar-nav navbar-right">
 			        <li><%= link_to 'Все карточки', cards_path %></li>
 			        <li><%= link_to 'Добавить карточку', new_card_path %></li>			        
