playing with capybara

--- a/app/views/cards/_card_check_translation_home.html.erb
+++ b/app/views/cards/_card_check_translation_home.html.erb
@@ -20,10 +20,10 @@
     	<h3><%= flash.now[:message] %></h3>
   	</div>
   	<br>
-    <%= f.input :user_translation_text, label: "Напишите перевод" %>
+    <%= f.input :user_translation_text, label: "Напишите перевод", input_html: {id: "user_trans2"} %>
     <%= f.hidden_field :id, value: @card.id %>
     <br>
-    <%= f.button :submit, "Проверить перевод" %>          
+    <%= f.button :submit, "Проверить перевод" %>
   <% end %>
 
 <% else %>
